# DeepCAD

./: .gitignore  Dockerfile  NOTES.md  pyproject.toml  requirements.txt  test.py
docker/: cpu-inference.Dockerfile  miniconda.Dockerfile
trainer/: base.py  trainerAE.py  trainerLGAN.py
utils/: export2step.py
