[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DeepCAD"
version = "0.1.0"
description = "CAD Generation"
dependencies = [
    # NOTE: torch isinstalled separately
    "cython==0.29.13",
    "h5py==2.10.0",
    "joblib==1.2.0",
    "matplotlib==3.1.3",
    "numpy==1.18.1",
    "pillow==8.3.2",
    "plyfile==0.7.2",
    "scipy==1.4.1",
    "tensorboardX==2.0",
    "tqdm==4.42.1",
    "trimesh==3.2.19",
    "scikit-learn==0.24.2"
]

[tool.hatch.build.targets.wheel]
packages = ["cadlib"]